<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cameocoder.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/my_nano_apps"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <Button
        android:id="@+id/spotify_streamer"
        style="@style/AppTheme.Button"
        android:text="@string/spotify_streamer" />

    <Button
        android:id="@+id/scores_app"
        style="@style/AppTheme.Button"
        android:text="@string/scores_app" />

    <Button
        android:id="@+id/library_app"
        style="@style/AppTheme.Button"
        android:text="@string/library_app" />

    <Button
        android:id="@+id/build_it_bigger"
        style="@style/AppTheme.Button"
        android:text="@string/build_bigger" />

    <Button
        android:id="@+id/xyx_reader"
        style="@style/AppTheme.Button"
        android:text="@string/xyz_reader" />

    <Button
        android:id="@+id/my_app"
        style="@style/AppTheme.Button"
        android:background="@color/udacityRed"
        android:text="@string/my_app" />

</LinearLayout>
